// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
option go_package = "github.com/ServiceWeaver/weaver/internal/benchmarks;benchmarks";

package benchmarks;

message PayloadCProto {
  double a = 1;
  string b = 2;
  int64 c = 3;
  X1Proto d = 4;
  string e = 5;
  int64 f = 6;
  X6Proto g = 7;
  string h = 8;
  int64 i = 9;
  float j = 10;
  string k = 11;
}

message X1Proto {
  X2Proto a = 1;
  repeated int64 b = 2;
}

message X2Proto {
  X3Proto a = 1;
}

message X3Proto {
  X4Proto a = 1;
  int64 b = 2;
  int64 c = 3;
}

message X4Proto {
  int64 a = 1;
  X5Proto b = 2;
  int64 c = 3;
}

message X5Proto {
  int64 a = 1;
  int64 b = 2;
}

message X6Proto {
  repeated bool a = 1;
}
